--- a/package.json
+++ b/package.json
@@ -21,11 +21,9 @@
     "browser-sync-webpack-plugin": "2.3.0",
     "laravel-mix": "^6.0.41",
     "postcss": "^8.4.5",
-    "svelte": "^3.46.2",
-    "svelte-loader": "^3.1.2",
     "tailwindcss": "^3.0.16"
   },
   "dependencies": {
-    "laravel-mix-svelte": "^0.5.0"
+    "alpinejs": "^3.8.1"
   }
 }
