--- a/mix-manifest.json
+++ b/mix-manifest.json
@@ -5,6 +5,7 @@
     "/public/images/bathroomremodel.jpg": "/public/images/bathroomremodel.jpg",
     "/public/images/kitchenremodel.jpg": "/public/images/kitchenremodel.jpg",
     "/public/images/MaxxRenoLogo.svg": "/public/images/MaxxRenoLogo.svg",
+    "/public/images/porchview.jpg": "/public/images/porchview.jpg",
     "/public/images/tiledfloor.jpg": "/public/images/tiledfloor.jpg",
     "/public/images/woodfloor.jpg": "/public/images/woodfloor.jpg"
 }
